--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="./pages/pages.css">
+    <link rel="stylesheet" href="./pages/pages.css">
     <title>Место</title>
 </head>
 
@@ -26,41 +26,45 @@
         </section>
         <section class="elements">
             <ul class="elements__list">
-                <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаевска" class="elements__image">
+                <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаевска"
+                        class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Карачаевск</div>
-                        <button type ="button"  class="elements__like-pic"></button>
+                        <button type="button" class="elements__like-pic"></button>
                     </div>
                 </li>
-                <li class="elements__item"><img src="./image/эльбрус.JPG" alt="пейзаж горы Эльбрус" class="elements__image">
+                <li class="elements__item"><img src="./image/эльбрус.JPG" alt="пейзаж горы Эльбрус"
+                        class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Гора Эльбрус</div>
-                        <button type ="button"  class="elements__like-pic"></button>
+                        <button type="button" class="elements__like-pic"></button>
                     </div>
                 </li>
                 <li class="elements__item"><img src="./image/домбай.jpg" alt="пейзаж Домбая" class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Домбай</div>
-                        <button type ="button"  class="elements__like-pic"></button>
+                        <button type="button" class="elements__like-pic"></button>
                     </div>
                 </li>
-                <li class="elements__item"><img src="./image/липецк (1).jpeg" alt="пейзаж Липецка" class="elements__image">
+                <li class="elements__item"><img src="./image/липецк (1).jpeg" alt="пейзаж Липецка"
+                        class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Липецк</div>
-                        <button type ="button"  class="elements__like-pic"></button>
+                        <button type="button" class="elements__like-pic"></button>
                     </div>
                 </li>
                 <li class="elements__item"><img src="./image/piter1.jpg" alt="пейзаж Питера" class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Питер</div>
-                            <button type ="button"  class="elements__like-pic"></button>
+                        <button type="button" class="elements__like-pic"></button>
                     </div>
                 </li>
-                <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаево-Черкессии" class="elements__image">
+                <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаево-Черкессии"
+                        class="elements__image">
                     <div class="elements__container">
                         <div class="elements__title">Карачаево-Черкессия</div>
-                            <button type ="button"  class="elements__like-pic"></button>
-                        
+                        <button type="button" class="elements__like-pic"></button>
+
                     </div>
                 </li>
             </ul>
@@ -72,20 +76,21 @@
             <div class="popup__container">
                 <button type="button" class="popup__close"></button>
                 <form class="popup__form">
-                    <h3 class="popup__title">Редактировать профиль</h2>
-                        <div class="popup__storage">
-                            <div class="popup__field">
-                            <input name='name' type="text" class="popup__input popup__input_type_name" value='Жaк-Ив-Кусто'>
-                            </div>
-                            <div class="popup__field">
-                            <input name='job' type="text" class="popup__input popup__input_type_job" value="Иследователь">
-                            </div>
+                    <h3 class="popup__title">Редактировать профиль</h3>
+                    <div class="popup__storage">
+                        <div class="popup__field">
+                            <input name='name' type="text" class="popup__input popup__input_type_name"
+                                value='Жaк-Ив-Кусто'>
                         </div>
-                    <button  type="submit" class="popup__submit">Сохранить</button>
+                        <div class="popup__field">
+                            <input name='job' type="text" class="popup__input popup__input_type_job"
+                                value="Иследователь">
+                        </div>
+                    </div>
+                    <button type="submit" class="popup__submit">Сохранить</button>
                 </form>
             </div>
-        </div>
-    </section>
+        </section>
     </div>
 </body>
 <script type="text/javascript" src="./index.js"></script>
