--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </section>
     </div>
+    <script src="./scripts/index.js"></script>
 </body>
-<script type="text/javascript" src="./scripts/index.js"></script>
 
 </html>
