--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </section>
             <section class="elements">
                 <ul class="elements__list">
-                    <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаевска"
+                    <li class="elements__item"><img src="./image/карачаевск.png" alt="пейзаж Карачаевска"
                             class="elements__image">
                         <div class="elements__container">
                             <h2 class="elements__title">Карачаевск</h2>
@@ -46,21 +46,21 @@
                             <button type="button" class="elements__like-pic"></button>
                         </div>
                     </li>
-                    <li class="elements__item"><img src="./image/липецк (1).jpeg" alt="пейзаж Липецка"
+                    <li class="elements__item"><img src="./image/липецк.jpeg" alt="пейзаж Липецка"
                             class="elements__image">
                         <div class="elements__container">
                             <h2 class="elements__title">Липецк</h2>
                             <button type="button" class="elements__like-pic"></button>
                         </div>
                     </li>
-                    <li class="elements__item"><img src="./image/piter1.jpg" alt="пейзаж Питера"
+                    <li class="elements__item"><img src="./image/piter.jpg" alt="пейзаж Питера"
                             class="elements__image">
                         <div class="elements__container">
                             <h2 class="elements__title">Питер</h2>
                             <button type="button" class="elements__like-pic"></button>
                         </div>
                     </li>
-                    <li class="elements__item"><img src="./image/карачаевск.png.png" alt="пейзаж Карачаево-Черкессии"
+                    <li class="elements__item"><img src="./image/карачаевск.png" alt="пейзаж Карачаево-Черкессии"
                             class="elements__image">
                         <div class="elements__container">
                             <h2 class="elements__title">Карачаево-Черкессия</h2>
@@ -78,12 +78,8 @@
                 <button type="button" class="popup__close"></button>
                 <form class="popup__form" name="popup__form-edit">
                     <h3 class="popup__title">Редактировать профиль</h3>
-                    <div class="popup__storage">
-                        <input name='name' type="text" class="popup__input popup__input_type_name">
-                    </div>
-                    <div class="popup__storage">
-                        <input name='job' type="text" class="popup__input popup__input_type_job">
-                    </div>
+                        <input name='name' type="text" class="popup__input popup__input_name">
+                        <input name='job' type="text" class="popup__input popup__input_job">
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </form>
             </div>
