--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 <button type="button" class="popup__close"></button>
                 <form class="popup__form" name="popup__form-edit">
                     <h3 class="popup__title">Редактировать профиль</h3>
-                        <input name='name' type="text" class="popup__input popup__input_name">
-                        <input name='job' type="text" class="popup__input popup__input_job">
+                        <input name='name' type="text" class="popup__input popup__input_type_name">
+                        <input name='job' type="text" class="popup__input popup__input_type_job">
                     <button type="submit" class="popup__submit">Сохранить</button>
                 </form>
             </div>
